cmake_minimum_required(VERSION 3.10.0)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLGAS_RELEASE "-Wall")
set(CMAKE_CXX_FLAGS_DEBUG "-Wall -ggdb -g -DDEBUG")

option(USE_DOUBLE_PRECISION off)

add_compile_definitions(PUBLIC USE_DOUBLE_PRECISION=${USE_DOUBLE_PRECISION})

add_subdirectory(third_party/gflags)
add_subdirectory(src)
